# exactpy

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: changelog.yml  publish.yml  tag.yml
.github/worklows/: changelog.yml  publish.yml
src/exactpy/: auth.py  client.py  exceptions.py
src/exactpy/alias_generators/: __init__.py
src/exactpy/controllers/: __init__.py  account.py  base.py  gl_account.py  gl_account_classification_mappings.py  journal.py  me.py  reporting_balance_by_classification.py
src/exactpy/controllers/crm/: __init__.py  account.py
src/exactpy/controllers/financial/: __init__.py  aging_overview.py  aging_payables_receivables_list.py  deductibility_percentage.py  exchange_rate.py  financial_period.py  gl_account.py  gl_account_classification_mappings.py  gl_scheme.py  gl_transaction_source.py  gl_transaction_type.py  journal.py  journal_status_list.py  official_returns.py  outstanding_invoices_overview.py  returns.py  (+5 more)
src/exactpy/models/: __init__.py  account.py  bank_account.py  base.py  deductibility_percentage.py  filters.py  gl_account.py  gl_account_classification_mappings.py  journal.py  me.py  query.py  reporting_balance_by_classification.py  validation.py
src/exactpy/namespaces/: base.py  crm.py  financial.py  payroll.py  system.py
src/exactpy/serializers/: __init__.py
src/exactpy/types/: __init__.py
src/exactpy/utils/: __init__.py  fields.py
src/exactpy/validators/: __init__.py
tests/: test_alias_generators.py  test_auth.py  test_dummy.py  test_utils.py
(+40 files in other folders)
