[project]
name = "exactpy"
version = "0.0.22"
description = "Modern Python interface to the exact online API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "azure-keyvault-secrets>=4.10.0",
    "commitizen>=4.9.1",
    "httpx>=0.28.1",
    "httpx-retries>=0.4.5",
    "loguru>=0.7.3",
    "pydantic>=2.12.0",
    "requests-oauthlib>=2.0.0",
    "sparkdantic>=2.6.0",
]

[project.optional-dependencies]
pandas = []
pyspark = [
    "pyspark>=4.0.1",
]

[dependency-groups]
dev = []
pre-commit = [
    "deptry>=0.20.0",
]
test = [
    "deptry>=0.20.0",
    "coverage>=7.6.1",
    "pytest>=8.3.4",
    "pytest-httpx>=0.35.0",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = [
  "src"
]

[tool.pytest]
testpaths = "tests"
log_cli = "true"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.22"
tag_format = "$version"
changelog_incremental = true
update_changelog_on_bump = true
version_files = ["src/exactpy/__init__.py:__version__", "pyproject.toml:^version"]
bump_message = "release $current_version -> $new_version"
annotated_tag = true

[tool.deptry]
pep621_dev_dependency_groups = ["precommit", "test"]
known_first_party = ["exactpy"]
